[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/TowerSection/Tower.gd" type="Script" id=1]
[ext_resource path="res://Scenes/TowerSection/Engine.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/TowerSection/TowerVisuals.gd" type="Script" id=3]
[ext_resource path="res://Scenes/TowerSection/CockPitSprite.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Tower/GrabbingPole.png" type="Texture" id=5]
[ext_resource path="res://Art/Tower/GrabbingClamp.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Audio/SfxPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Audio/SectionBumpSFX.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/GrabSFX.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 48.0908

[sub_resource type="Animation" id=2]

resource_name = "Jump"
length = 0.35
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.7 ), Vector2( 1.2, 1.2 ), Vector2( 1.19, 1.19 ), Vector2( 1.12, 1.12 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "Grab"
length = 0.35
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/CockPit/GrabbingPole:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 31.1141, -83.1138 ), Vector2( -17.1272, 115.317 ), Vector2( -9.54669, 89.53 ), Vector2( -5.22259, -11.913 ), Vector2( -6.9486, -41.8417 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/CockPit/GrabbingPole:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -162.394, -154.631, -162.246, -210.73, -210.73 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/CockPit/GrabbingPole/GrabbingPole:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -70.984, -110.922 ), Vector2( 7.52484, -191.827 ), Vector2( -3.26057, -200.255 ), Vector2( -3.26057, -200.255 ), Vector2( -3.26057, -200.255 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/CockPit/GrabbingPole/GrabbingPole:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 80.733, 91.2844, 159.757, 180.255, 180.255 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visuals/CockPit/GrabbingPole/GrabbingPole/GrabbingClamp:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6.63538, -189.916 ), Vector2( -5.12413, -204.376 ), Vector2( -5.12413, -204.376 ), Vector2( -5.12413, -204.376 ), Vector2( -5.12413, -204.376 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Visuals/CockPit/GrabbingPole/GrabbingPole/GrabbingClamp:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Visuals/CockPit/GrabbingPole:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Visuals/CockPit/GrabbingPole2:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 61.8451, 41.9496 ), Vector2( -19.7389, -117.513 ), Vector2( -2.44257, -91.0498 ), Vector2( 10.5297, 16.274 ), Vector2( -9.42822, 33.0387 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Visuals/CockPit/GrabbingPole2:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -46.9949, -31.4631, -19.0336, 8.83091, 8.83091 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Visuals/CockPit/GrabbingPole2/GrabbingPole:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 70.1903, -88.9806 ), Vector2( -1.26355, -201.417 ), Vector2( -1.26355, -201.417 ), Vector2( -1.26355, -201.417 ), Vector2( -1.26355, -201.417 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Visuals/CockPit/GrabbingPole2/GrabbingPole:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 321.724, 283.1, 204.146, 179.596, 179.596 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Visuals/CockPit/GrabbingPole2/GrabbingPole/GrabbingClamp:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5.12413, -204.376 ), Vector2( -5.12413, -204.376 ), Vector2( -5.12413, -204.376 ), Vector2( -5.12413, -204.376 ), Vector2( -5.12413, -204.376 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Visuals/CockPit/GrabbingPole2/GrabbingPole/GrabbingClamp:rotation_degrees")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Visuals/CockPit/GrabbingPole2:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=4]

resource_local_to_scene = true
custom_solver_bias = 0.0
radius = 38.6519
_sections_unfolded = [ "Resource" ]

[node name="Tower" type="KinematicBody2D" groups=[
"has_engine",
"has_collided_signal",
]]

z_index = 20
input_pickable = false
collision_layer = 7
collision_mask = 1
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "Z Index", "collision" ]

[node name="GrabRange" type="Area2D" parent="." index="0"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabRange" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="JumpAnimation" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Jump = SubResource( 2 )
blend_times = [  ]

[node name="GrabAnimation" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Grab = SubResource( 3 )
blend_times = [  ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Engine" parent="." index="4" instance=ExtResource( 2 )]

[node name="Visuals" type="Position2D" parent="." index="5" groups=[
"has_collided_signal",
]]

editor/display_folded = true
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CockPit" parent="Visuals" index="0" instance=ExtResource( 4 )]

editor/display_folded = true
scale = Vector2( 1, 1 )
z_index = 20

[node name="GrabbingPole" type="Sprite" parent="Visuals/CockPit" index="1"]

visible = false
position = Vector2( -6.9486, -41.8417 )
rotation = -3.67793
z_index = -1
texture = ExtResource( 5 )
offset = Vector2( -0.451172, -96.3882 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="GrabbingPole" type="Sprite" parent="Visuals/CockPit/GrabbingPole" index="0"]

position = Vector2( -3.26057, -200.255 )
rotation = 3.14604
texture = ExtResource( 5 )
offset = Vector2( -1.0549, -92.6634 )
_sections_unfolded = [ "Transform" ]

[node name="GrabbingClamp" type="Sprite" parent="Visuals/CockPit/GrabbingPole/GrabbingPole" index="0"]

position = Vector2( -5.12413, -204.376 )
texture = ExtResource( 6 )
offset = Vector2( -0.107225, -28.1325 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="GrabbingPole2" type="Sprite" parent="Visuals/CockPit" index="2"]

visible = false
position = Vector2( -9.42822, 33.0387 )
rotation = 0.154128
z_index = -1
texture = ExtResource( 5 )
offset = Vector2( -0.451172, -96.3882 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="GrabbingPole" type="Sprite" parent="Visuals/CockPit/GrabbingPole2" index="0"]

position = Vector2( -1.26355, -201.417 )
rotation = 3.13454
texture = ExtResource( 5 )
offset = Vector2( -1.0549, -92.6634 )
flip_h = true
_sections_unfolded = [ "Transform" ]

[node name="GrabbingClamp" type="Sprite" parent="Visuals/CockPit/GrabbingPole2/GrabbingPole" index="0"]

position = Vector2( -5.12413, -204.376 )
texture = ExtResource( 6 )
offset = Vector2( -0.107225, -28.1325 )
flip_h = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionSound1" parent="." index="6" instance=ExtResource( 7 )]

stream = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]
volume = -12

[node name="CollisionSound2" parent="." index="7" instance=ExtResource( 7 )]

stream = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]
volume = -12

[node name="CollisionSound3" parent="." index="8" instance=ExtResource( 7 )]

stream = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]
volume = -12

[node name="GrabSFX" parent="." index="9" instance=ExtResource( 7 )]

stream = ExtResource( 9 )
volume = -10


